NMJ Salesforce Project/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>More_details_on_source__c</fullName>
        <label>Source details</label>
        <picklist>
            <picklistValues>
                <fullName>TV Ads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cinema Ads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event-External</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exhibition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airport Screens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event - In store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hoarding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Magazine Ads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Magazine Article/Shoot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product placement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newspaper Ad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newspaper Article</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reference- External</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reference- Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Store visibility led football</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>More_details_source__c</fullName>
        <label>More details/source</label>
        <picklist>
            <picklistValues>
                <fullName>Airport screens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cinema ads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event - External</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event - In Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exhibition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hoarding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Magazine Article / Shoot / Product placement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newspaper Article</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reference - External</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reference - Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Store Visibility led footfall</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Music_Dislikes__c</fullName>
        <label>Music (Dislikes)</label>
        <length>42</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Music_likes__c</fullName>
        <label>Music (Likes)</label>
        <length>42</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_the_Company__c</fullName>
        <label>Name of the Company</label>
        <length>52</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nature_of_business__c</fullName>
        <label>Nature of business</label>
        <picklist>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertainment  Leisure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entrepreneur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FMCG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food, Beverages &amp; Tobacco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grocery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investment Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Luxury Goods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motion Picture &amp; Vedio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Music</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newspaper Publisher</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online Auctions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pension funds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pharmaceuticals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Equity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Publishing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Real Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail &amp; wholesale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Securities and Commodity Exchange</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Networth__c</fullName>
        <label>Networth</label>
        <picklist>
            <picklistValues>
                <fullName>50 Crores to 100 Crores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100 Crores to 200 Crores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200 Crores to 300 Crores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>300 Crores to 400 Crores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>400 Crores to 500 Crores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 500 Crores</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>New_Year__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Year</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Next_Anniversary_Date1__c</fullName>
        <label>Next Anniversary Date1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Anniversary_Date__c</fullName>
        <formula>IF ( MONTH (Anniversary__c)=2 &amp;&amp; DAY (Anniversary__c)=29,
    IF ((DATE (YEAR(TODAY()),1,1) + 59)  &gt; TODAY(),
         (DATE (YEAR(TODAY()),1,1)) + 59,
         (DATE (YEAR(TODAY())+1,1,1)) + 59),
    IF (DATE (YEAR(TODAY()),MONTH(Anniversary__c),DAY(Anniversary__c)) &gt; TODAY(),
         DATE (YEAR(TODAY()),MONTH(Anniversary__c),DAY(Anniversary__c)),
         DATE (YEAR(TODAY())+1,MONTH(Anniversary__c),DAY(Anniversary__c))
       )
)</formula>
        <label>Next Anniversary Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Birthday__c</fullName>
        <formula>IF ( MONTH (Birthday_New__c)=2 &amp;&amp; DAY (Birthday_New__c)=29,
    IF ((DATE (YEAR(TODAY()),1,1) + 59)  &gt; TODAY(),
         (DATE (YEAR(TODAY()),1,1)) + 59,
         (DATE (YEAR(TODAY())+1,1,1)) + 59),
    IF (DATE (YEAR(TODAY()),MONTH(Birthday_New__c),DAY(Birthday_New__c)) &gt; TODAY(),
         DATE (YEAR(TODAY()),MONTH(Birthday_New__c),DAY(Birthday_New__c)),
         DATE (YEAR(TODAY())+1,MONTH(Birthday_New__c),DAY(Birthday_New__c))
       )
)</formula>
        <label>Next Birthday</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Non_Sales_Event__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non Sales Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Dislikes__c</fullName>
        <label>Other (Dislikes)</label>
        <length>42</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Likes__c</fullName>
        <label>Other (Likes)</label>
        <length>42</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Magazines__c</fullName>
        <label>Other Magazines</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Passion__c</fullName>
        <label>Other Passion</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Source__c</fullName>
        <inlineHelpText>Specify name of other Contact source</inlineHelpText>
        <label>Other Source</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_city_if_any__c</fullName>
        <label>Other city, if any</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_remarks_about_source__c</fullName>
        <label>Other remarks about source</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Passions__c</fullName>
        <label>Passions</label>
        <picklist>
            <picklistValues>
                <fullName>Reading Books</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Personal_Email__c</fullName>
        <label>Personal Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Personal_Interests__c</fullName>
        <label>Personal Interests:</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personality_description__c</fullName>
        <label>Personality description</label>
        <length>42</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pincode__c</fullName>
        <label>Residence Pincode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <picklist>
            <picklistValues>
                <fullName>CEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CFO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chairman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>President</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Post_Graduation_Location__c</fullName>
        <label>Post Graduation Location</label>
        <picklist>
            <picklistValues>
                <fullName>Delhi</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Post_Graduation_college_name__c</fullName>
        <label>Post Graduation college name</label>
        <picklist>
            <picklistValues>
                <fullName>IIM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Potential_Non_Potential__c</fullName>
        <description>These flags will indicate if client is potential or non potential.</description>
        <inlineHelpText>These flags will indicate if client is potential or non potential.</inlineHelpText>
        <label>Potential/Non Potential</label>
        <picklist>
            <picklistValues>
                <fullName>P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buyer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Previous_Jewelers__c</fullName>
        <label>Previous Jewelers</label>
        <picklist>
            <picklistValues>
                <fullName>Malbar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Josco</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Profession__c</fullName>
        <label>Profession</label>
        <picklist>
            <picklistValues>
                <fullName>Doctor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entrepreneur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Housewife</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lawyer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Profile_ExternalID__c</fullName>
        <externalId>true</externalId>
        <label>Profile ExternalID</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is for lookup field in syncDataPage2</description>
        <label>Profile Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Profile_Status__c</fullName>
        <description>Profile status</description>
        <inlineHelpText>Known: Profiles with little information and there ar eno interactions created for it
Relevant: Profiles with much information but there is no intercation created for it
Interacted: Profiles for which interaction is created</inlineHelpText>
        <label>Profile Status</label>
        <picklist>
            <picklistValues>
                <fullName>Known</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Relevant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interacted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recreational_Dislikes__c</fullName>
        <label>Recreational (Dislikes)</label>
        <length>42</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recreational_Likes__c</fullName>
        <label>Recreational (Likes)</label>
        <length>42</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remarks_on_source__c</fullName>
        <label>Remarks on source</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reset_Aniversary_Email__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Reset Aniversary Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reset_Birthday_Email_System__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Reset Birthday Email System</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reset_Next_Birthday__c</fullName>
        <label>Reset Next Birthday</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Residence_Address_1__c</fullName>
        <label>Residence Address 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Residence_Address_2__c</fullName>
        <label>Residence Address 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Residence_Address_3__c</fullName>
        <label>Residence Address 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Rknews__News_Search_Override__c</fullName>
        <description>This field will override the default Account Name Search for the Redkite News component.</description>
        <inlineHelpText>This field will override the default Account Name Search for the Redkite News component. Please enter a search term for the news articles that you would like to see for this Account.</inlineHelpText>
        <label>News Search Override</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_of_Contact__c</fullName>
        <label>Role of Contact</label>
        <picklist>
            <picklistValues>
                <fullName>Brother</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brother-In-Law</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daughter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daughter-in-law</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ex-Husband</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ex-Wife</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Father</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Father-In-Law</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grandchildren</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Head</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Husband</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maternal Cousin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mother</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mother-In-Law</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paternal cousin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sister</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sister-In-Law</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Son</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Son-in-law</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wife</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Event__c</fullName>
        <label>Sales Event</label>
        <picklist>
            <picklistValues>
                <fullName>Exhibition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclusive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>School_Name_Location__c</fullName>
        <label>School Name and Location</label>
        <picklist>
            <picklistValues>
                <fullName>Delhi Public School, Bangalore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delhi Public School, Delhi</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <label>School</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secretary_2__c</fullName>
        <inlineHelpText>Add Secretary&apos;s Name, Phone no., Email ID...and other details</inlineHelpText>
        <label>Secretary 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Secretary_3__c</fullName>
        <inlineHelpText>Add Secretary&apos;s Name, Phone no., Email ID...and other details</inlineHelpText>
        <label>Secretary 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Secretary_Email__c</fullName>
        <label>Secretary Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Secretary_Name__c</fullName>
        <label>Secretary Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secretary_Phone__c</fullName>
        <label>Secretary Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Secretary__c</fullName>
        <inlineHelpText>Add Secretary&apos;s Name, Phone no., Email ID...and other details</inlineHelpText>
        <label>Secretary</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <picklist>
            <picklistValues>
                <fullName>Airport Screens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cinema ads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event - External</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event - In Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exhibition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hoarding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Magazine Ads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newspaper Article</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reference - External</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reference - Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shoot / Product placement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Store Visibility led footfall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Walk-In</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Testing_Field__c</fullName>
        <inlineHelpText>Enter Testing Feedback</inlineHelpText>
        <label>Testing_Field</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>University__c</fullName>
        <label>University</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wrist_watch_brand__c</fullName>
        <label>Wrist watch brand</label>
        <picklist>
            <picklistValues>
                <fullName>Fossil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HMT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fastrack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GAS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>lastInteractionDate__c</fullName>
        <description>Stores the latest interaction date for a certain Contact.</description>
        <label>lastInteractionDate</label>
        <type>DateTime</type>
    </fields>
    <listViews>
        <fullName>All_Profiles</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Profiles</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>BirthdateValidation</fullName>
        <active>true</active>
        <errorConditionFormula>if(  NOT(CONTAINS(TEXT(YEAR( Birthday_New__c )),&quot;1900&quot;)), IF(  ISBLANK(Indicative_age__c)  ,false,true),false)</errorConditionFormula>
        <errorMessage>If you wish to enter DOB, remove indicative age.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IndicativeAgeValidation</fullName>
        <active>true</active>
        <errorConditionFormula>if( NOT( ISBLANK( Indicative_age__c  ) ), IF( NOT(CONTAINS(TEXT(YEAR( Birthday_New__c )),&quot;1900&quot;)) ,true,false),false)</errorConditionFormula>
        <errorMessage>If you wish to enter Indicative Age, default birth year to 1900</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mobile_Alternative_Number_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>IF( ISBLANK( Mobile_Alternate__c) , false , NOT(REGEX(Mobile_Alternate__c, &quot;\\D*?(\\d\\D*?){10}&quot;)) )</errorConditionFormula>
        <errorDisplayField>Mobile_Alternate__c</errorDisplayField>
        <errorMessage>Please enter valid Mobile Number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mobile_Number_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>IF( ISBLANK(MobilePhone) , false , 
IF(
((LEN(TRIM(MobilePhone)) =3)),false,NOT(REGEX(MobilePhone, &quot;[+91]\\D*?(\\d\\D*?){12}&quot;)) )
)</errorConditionFormula>
        <errorDisplayField>MobilePhone</errorDisplayField>
        <errorMessage>Please Enter Valid Mobile Number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Pincode_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>OR(IF(!ISBLANK(Pincode__c),
 IF(!ISPICKVAL( Country__c , &apos;India&apos;) , false , NOT(REGEX(Pincode__c, &quot;\\D*?(\\d\\D*?){6}&quot;)) ),false)
,
IF(!ISBLANK( Company_pincode__c ),
 IF(!ISPICKVAL(Company_country__c, &apos;India&apos;) , false , NOT(REGEX(Company_pincode__c , &quot;\\D*?(\\d\\D*?){6}&quot;))),false))</errorConditionFormula>
        <errorMessage>Pincode should be six digits for India</errorMessage>
    </validationRules>
</CustomObject>